--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,8 @@ functional:
   - Пользователь должен иметь возможность фильтровать товары
   - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  - Пользователь может добавить товар в корзину и продолжить выбирать товары в каталоге
+  - На странице корзины пользователь может удалить товар из корзины, продолжить выбирать товары в каталоге, оформить заказ с переходом на страницу оплаты
 non-functional:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
@@ -11,20 +13,11 @@ non-functional:
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров
   - Сайт должен быть способен обрабатывать большое количество трафика
   - Сайт должен быть доступен на различных устройствах
+  - Магазин — это SPA приложение, которое не перезагружает страницу
+  - Корзина должна храниться в сессии браузера
+  - На странице товара и в каталоге выводятся название, рейтинг, цена со скидкой и без
 implicit:
-  - регистрация пользователя
-  - авторизация пользователя
-  - возможность выбора количества товара при добавлении в корзину
-  - отображение общей суммы товаров в корзине
-  - возможность удаления товара из корзины
-  - возможность просмотра истории заказов
-  - возможность просмотра состояния заказов
-  - возможность просмотра отзывов о товаре на странице товара
-  - возможность написания отзыва о товаре на странице товара
-  - возможность увеличения изображений товара на странице товара
-  - отображение сроков доставки товара на странице товара
-  - отображение "похожих товаров" на странице товара
-  - возможность выбора языка на сайте
-  - возможность выбора адреса доставки без регистрации
-  - возможность выбора отображения цен на товары в других валютах
-  - возвращение "на главную" по клику в шапке на название магазина
+  - Отображение общей суммы товаров в корзине
+  - Возможность удаления товара из корзины
+  - Возможность выбора языка на сайте
+  - Пользователь не может редактировать описание товара
