--- a/requirements.yml
+++ b/requirements.yml
@@ -18,6 +18,5 @@ non-functional:
   - На странице товара и в каталоге выводятся название, рейтинг, цена со скидкой и без
 implicit:
   - Отображение общей суммы товаров в корзине
-  - Возможность удаления товара из корзины
   - Возможность выбора языка на сайте
-  - Пользователь не может редактировать описание товара
+  - Пользователь не может редактировать информацию о товаре
