--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,10 +1,23 @@
 ---
 - summary: |
-    Успешная проверка фильтра по ключевому слову
+    Переход на следующую страницу
+  requirement: |
+    Пользователь может переходить на следующую страницу в каталоге товаров
+  prerequisites: |
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
+  test-data: |
+    Нет данных
+  steps:
+    - Нажимаем на кнопку "Следующая"
+  expected-result: |
+    Отображается следующая страница каталога товаров
+
+- summary: |
+    Проверка фильтра по ключевому слову
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову
   prerequisites: |
-    Открыта главная страница магазина 
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
@@ -18,7 +31,7 @@
   requirement: |
     При попытке поиска несуществующего товара, должно отображаться сообщение с ошибкой
   prerequisites: |
-    Открыта главная страница магазина 
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
@@ -32,7 +45,7 @@
   requirement: |
     Пользователь должен иметь возможность искать товары по категории
   prerequisites: |
-    Открыта главная страница магазина 
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
@@ -47,7 +60,7 @@
   requirement: |
     Пользователь должен иметь возможность фильтровать товары по производителю
   prerequisites: |
-    Открыта главная страница магазина 
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
@@ -57,17 +70,17 @@
     Отображаются товары выбранного производителя
 
 - summary: |
-    Успешная проверка фильтра по цене
+    Проверка фильтра по цене
   requirement: |
     Пользователь должен иметь возможность фильтровать товары по цене
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
   steps:
-    - Ввести в поле "От" значение "15"
-    - Ввести в поле "До" значение "50"
+    - Вводим в поле "От" значение "15"
+    - Вводим в поле "До" значение "50"
   expected-result: |
    Отображаются товары согласно введённому диапазону цен
 
@@ -76,11 +89,11 @@
   requirement: |
     Пользователь должен иметь возможность просматривать подробную информацию о товаре
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
   test-data: |
     Нет данных
   steps:
-    - Кликнуть по изображению товара из списка
+    - Нажимаем по изображению товара из списка
   expected-result: |
     Открывается страница товара, где отображается цена, описание, изображения товара, кнопка добавления в корзину
 
@@ -89,13 +102,13 @@
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Установлен фильтр "В наличии"
   test-data: |
     Нет данных
   steps:
-    - Кликнуть на кнопку добавления товара из отображаемого списка
-    - Перейти в корзину
+    - Нажимаем на кнопку добавления товара из отображаемого списка
+    - Переходим в корзину
   expected-result: |
     В корзине отображается выбранный товар
 
@@ -104,23 +117,94 @@
   requirement: |
     Пользователь должен иметь возможность добавлять товары в корзину
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Установлен фильтр "В наличии"
   test-data: |
     Нет данных
   steps:
-    - Перейти на страницу товара из списка
-    - Кликнуть на кнопку добавления товара
-    - Перейти в корзину
+    - Переходим на страницу товара из списка
+    - Нажимаем на кнопку добавления товара
+    - Переходим в корзину
   expected-result: |
     В корзине отображается выбранный товар
+
+- summary: |
+    Проверка перехода по хэштегу
+  requirement: |
+    Пользователь может осуществлять переход в категорию товаров, используя хэштег из карточки товара
+  prerequisites: |
+    Открыта карточка любого товара
+  test-data: |
+    Нет данных
+  steps:
+    - Нажимаем на хэштег категории товара
+  expected-result: |
+    Отображаются товары соответствующей хэштегу категории
+
+- summary: |
+    Удаление товара из корзины
+  requirement: |
+    На странице корзины пользователь может удалить товар из корзины
+  prerequisites: |
+    Открыта корзина с добавленными в неё товарами (https://hexlet-products-store.vercel.app/cart)
+  test-data: |
+    Нет данных
+  steps:
+    - Нажимаем на кнопку "Удалить" напротив выбранного товара
+    - Перезагружаем страницу
+  expected-result: |
+    Выбранный товар удалён из корзины
+
+- summary: |
+    Проверка кнопки "Очистить корзину" в корзине товаров
+  requirement: |
+    На странице корзины пользователь может удалить товар из корзины
+  prerequisites: |
+    Открыта корзина с добавленными в неё товарами (https://hexlet-products-store.vercel.app/cart)
+  test-data: |
+    Товар 1 (https://hexlet-products-store.vercel.app/products/1)
+    Товар 2 (https://hexlet-products-store.vercel.app/products/2)
+  steps:
+    - Нажимаем на кнопку "Очистить корзину"
+    - Перезагружаем страницу
+  expected-result: |
+    Корзина пуста
+
+- summary: |
+    Проверка кнопки "Продолжить покупки" в корзине товаров
+  requirement: |
+    Пользователь может продолжить выбирать товары в каталоге 
+  prerequisites: |
+    Открыта корзина (https://hexlet-products-store.vercel.app/cart)
+  test-data: |
+    Нет данных
+  steps:
+    - Нажимаем на кнопку "Продолжить покупки"
+  expected-result: |
+    Происходит переход на главную (https://hexlet-products-store.vercel.app/)
+
+- summary: |
+    Проверка запроса на оформление заказа
+  requirement: |
+    При нажатии на кнопку "Оформить заказ" браузер подает запрос и получает ответ сервера
+  prerequisites: |
+    Открыта страница корзины с добавленным товаром (https://hexlet-products-store.vercel.app/cart)
+  test-data: |
+    Нет данных
+  steps:
+    - Открываем DevTools
+    - Переходим на вкладку "Network"
+    - Нажимаем кнопку "Оформить заказ" на странице
+    - Открываем последний запрос
+  expected-result: |
+    На вкладке "Network" отображается успешный запрос со статусом 200 ОК
 
 - summary: |
     Проверка отображения сайта с мобильного устройства
   requirement: |
     Сайт должен иметь мобильную версию
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
   test-data: |
     Нет данных
   steps:
@@ -134,7 +218,7 @@
   requirement: |
     В фильтр по цене можно ввести только цифры
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
@@ -149,7 +233,7 @@
   requirement: |
     В фильтре по цене могут быть только положительные значения
   prerequisites: |
-    Открыта главная страница магазина
+    Открыта главная страница магазина (https://hexlet-products-store.vercel.app/)
     Фильтры не выбраны
   test-data: |
     Нет данных
