--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Успешная проверка фильтра по ключевому слову
+    Проверка фильтра по ключевому слову
   status: pass
 
 - summary: |
@@ -16,7 +16,7 @@
   status: pass
 
 - summary: |
-    Успешная проверка фильтра по цене
+    Проверка фильтра по цене
   status: pass
 
 - summary: |
@@ -30,6 +30,26 @@
 - summary: |
     Добавление товара в корзину со страницы товара
   status: pass
+
+- summary: |
+    Проверка перехода по хэштегу
+  status: fail
+
+- summary: |
+    Удаление товара из корзины
+  status: pass
+
+- summary: |
+    Проверка кнопки "Очистить корзину" в корзине товаров
+  status: fail
+
+- summary: |
+    Проверка кнопки "Продолжить покупки" в корзине товаров
+  status: pass
+
+- summary: |
+    Проверка запроса на оформление заказа
+  status: fail
 
 - summary: |
     Проверка отображения сайта с мобильного устройства
