--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Переход на следующую страницу
+    Переход на следующую страницу каталога
   requirement: |
     Пользователь может переходить на следующую страницу в каталоге товаров
   prerequisites: |
