--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,5 +1,9 @@
 ---
 - summary: |
+    Переход на следующую страницу каталога
+  status: pass
+
+- summary: |
     Проверка фильтра по ключевому слову
   status: pass
 
