--- a/bugreports.yml
+++ b/bugreports.yml
@@ -42,6 +42,20 @@
     Ошибка изображена на скриншоте previous.png
 
 - summary: |
+    На последней старнице магазина отображается кнопка "Следующая"
+  environment: |
+    Google Chrome 115.0.5790.110 (Официальная сборка), (64 бит)
+    ОС Windows 10 Pro x64
+  steps-to-reproduce: |
+    1. Перейти на главную
+    2. Пролистать страницы магазина до конца
+    3. Убедиться, что страница с товарами не сменились
+  expected-result: |
+    На последней странице магазина отображается только кнопка "Предыдущая"
+  actual-result: |
+    Отображаются кнопки навигации "Предыдущая" и "Следующая"
+
+- summary: |
     Существует возможность ввести отрицательное значение в фильтр по цене
   environment: |
     Google Chrome 115.0.5790.110 (Официальная сборка), (64 бит)
@@ -67,3 +81,62 @@
   actual-result: |
     Отображается "битая" иконка
     Ошибка изображена на скриншоте flag.png
+
+- summary: |
+    Нажатие на "X" не закрывает окно подтверждения оформления заказа
+  environment: |
+    Google Chrome 115.0.5790.110 (Официальная сборка), (64 бит)
+    ОС Windows 10 Pro x64
+  steps-to-reproduce: |
+    1. Переходим в корзину с добавленными товарами
+    2. Нажимаем "Оформить заказ"
+    3. В появившемся модальном окне нажимаем на крестик "Х"
+  expected-result: |
+    Модальное окно закрывается
+  actual-result: |
+    Окно не закрывается
+
+- summary: |
+    Ошибка 500 при оформлении заказа
+  environment: |
+    Google Chrome 115.0.5790.110 (Официальная сборка), (64 бит)
+    ОС Windows 10 Pro x64
+  steps-to-reproduce: |
+    1. Добавляем товар в корзину
+    2. Переходим в корзину
+    3. Открываем DevTools
+    4. Переходим на вкладку "Network"
+    5. Открываем последний запрос
+  expected-result: |
+    На вкладке "Network" отображается успешный запрос со статусом "200 ОК"
+  actual-result: |
+    Сервер возвращает ошибку "500 Internal Server Error"
+
+
+- summary: |
+    Отображаются удаленные товары при перезагрузке корзины
+  environment: |
+    Google Chrome 115.0.5790.110 (Официальная сборка), (64 бит)
+    ОС Windows 10 Pro x64
+  steps-to-reproduce: |
+    1. Добавить любой товар в корзину
+    2. Перейти в корзину
+    3. Нажать кнопку "Очистить корзину"
+    4. Перезагрузить страницу 
+  expected-result: |
+    Корзина пуста
+  actual-result: |
+    Товары не удаляются из корзины
+
+- summary: |
+    Название магазина в шапке не перенаправляет на главную страницу
+  environment: |
+    Google Chrome 115.0.5790.110 (Официальная сборка), (64 бит)
+    ОС Windows 10 Pro x64
+  steps-to-reproduce: |
+    1. Переходим в корзину
+    2. Нажимаем на "Hexlet Store" в шапке сайта
+  expected-result: |
+    Происходит перенаправление на главную страницу
+  actual-result: |
+    Ничего не происходит
